force-app/main/default/objects/Negoptim__Assortment_Matrix_review__c/Negoptim__Assortment_Matrix_review__c.object-meta.xml
<CustomObject>
    <label>Assortment Matrix review</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Nom de Assortment Matrix review</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assortment Matrix review</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>