force-app/main/default/objects/Negoptim__Assortment_Matrix_review__c/fields/Negoptim__Assortment_Strate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Assortment_Strate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assortment Strate</label>
    <referenceTo>Negoptim__Orga_BU__c</referenceTo>
    <relationshipLabel>Assortment Matrix review (Assortment Strate)</relationshipLabel>
    <relationshipName>Assortment_Matrix_review</relationshipName>
    <type>Lookup</type>
</CustomField>