force-app/main/default/objects/Negoptim__Assortment_Matrix_review__c/fields/Negoptim__BU_Target__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__BU_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BU Target</label>
    <referenceTo>Negoptim__Orga_BU__c</referenceTo>
    <relationshipLabel>Assortment_Matrix_detail</relationshipLabel>
    <relationshipName>Assortment_Matrix_detail</relationshipName>
    <type>Lookup</type>
</CustomField>