force-app/main/default/objects/Negoptim__Assortment_Matrix_review__c/fields/Negoptim__Category__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Category__c</fullName>
    <formula>Negoptim__Produit__r.Negoptim__Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>