force-app/main/default/objects/Negoptim__Assortment_Matrix_review__c/fields/Negoptim__Code_produit__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Code_produit__c</fullName>
    <formula>Negoptim__Produit__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code produit</label>
    <type>Text</type>
</CustomField>