force-app/main/default/objects/Negoptim__Assortment_Matrix_review__c/fields/Negoptim__EAN__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__EAN__c</fullName>
    <formula>Negoptim__Produit__r.Negoptim__Product_EAN__c</formula>
    <label>EAN</label>
    <type>Text</type>
</CustomField>