force-app/main/default/objects/Negoptim__Assortment_Matrix_review__c/fields/Negoptim__ND_P1__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ND_P1__c</fullName>
    <label>ND-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>