force-app/main/default/objects/Negoptim__Assortment_Matrix_review__c/fields/Negoptim__Orga_HE_path__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Orga_HE_path__c</fullName>
    <formula>Negoptim__Produit__r.Negoptim__Category__r.Negoptim__Path__c</formula>
    <label>Hierarchy path</label>
    <type>Text</type>
</CustomField>