force-app/main/default/objects/Negoptim__Assortment_Matrix_review__c/fields/Negoptim__Orga_Hierarchy_Element__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Orga_Hierarchy_Element__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Orga Hierarchy Element</label>
    <referenceTo>Negoptim__Orga_HE__c</referenceTo>
    <relationshipLabel>Assortment Matrix review</relationshipLabel>
    <relationshipName>Assortment_Matrix_review</relationshipName>
    <type>Lookup</type>
</CustomField>