force-app/main/default/objects/Negoptim__Assortment_Matrix_review__c/fields/Negoptim__Product_VIP__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Product_VIP__c</fullName>
    <formula>Negoptim__Produit__r.Negoptim__VIP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product VIP</label>
    <type>Text</type>
</CustomField>