force-app/main/default/objects/Negoptim__Assortment_Matrix_review__c/fields/Negoptim__Produit__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Assortment_Matrix_detail</relationshipLabel>
    <relationshipName>Assortment_Matrix_detail</relationshipName>
    <type>Lookup</type>
</CustomField>