force-app/main/default/objects/Negoptim__Assortment_Matrix_review__c/fields/Negoptim__SellOut_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellOut_Quantity__c</fullName>
    <label>SellOut Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>