force-app/main/default/objects/Negoptim__Assortment_Matrix_review__c/fields/Negoptim__WD_P1_Marketbase__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__WD_P1_Marketbase__c</fullName>
    <label>WD-1 Marketbase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>