force-app/main/default/objects/Negoptim__Assortment_Matrix_review__c/listViews/Negoptim__DV_Diffusion_Vendante.listView-meta.xml
<ListView>
    <fullName>Negoptim__DV_Diffusion_Vendante</fullName>
    <columns>NAME</columns>
    <columns>Negoptim__Year__c</columns>
    <columns>Negoptim__Sequence__c</columns>
    <columns>Negoptim__Name__c</columns>
    <columns>Negoptim__BU_Target__c</columns>
    <columns>Negoptim__Code_produit__c</columns>
    <columns>Negoptim__Produit__c</columns>
    <columns>Negoptim__EAN__c</columns>
    <columns>Negoptim__Category__c</columns>
    <columns>Negoptim__WD__c</columns>
    <columns>Negoptim__ND__c</columns>
    <columns>Negoptim__WD_Marketbase__c</columns>
    <columns>Negoptim__ND_Marketbase__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Negoptim__Name__c</field>
        <operation>equals</operation>
        <value>Fact1,Fact2</value>
    </filters>
    <label>DV Diffusion Vendante</label>
</ListView>